Bug 357509: Don't throw if new start is after end (or the other way around) but rather collapse. Patch by Alex Vincent <ajvincent@gmail.com>. r/sr=sicking